--- a/res/layout/activity_selector.xml
+++ b/res/layout/activity_selector.xml
@@ -12,28 +12,28 @@
     <LinearLayout android:id="@+id/container"
         android:orientation="vertical"
         android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-    	android:paddingLeft="@dimen/activity_horizontal_margin"
-    	android:paddingRight="@dimen/activity_horizontal_margin"
-    	android:paddingTop="@dimen/activity_vertical_margin" >
-        <TextView android:id="@+id/welcome"
+        android:layout_width="wrap_content">
+        <TextView android:id="@+id/activityLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/welcome"
+            android:text="@string/wherefrom"
             android:textSize="18sp" />
-        <TextView android:id="@+id/getstarted"
+        <TextView android:id="@+id/linelabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/getstarted"
+            android:text="@string/line_label"
             android:textSize="14sp" />
+        <Spinner android:id="@+id/lineSpinner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <TextView android:id="@+id/stationlabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/station_label"
+            android:textSize="14sp" />
+        <Spinner android:id="@+id/stationSpinner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
     </LinearLayout>
-    
-            
-    <ListView android:id="@+id/recenttrips"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        
-    />
 
 </LinearLayout>
