--- a/res/drawable/divider.xml
+++ b/res/drawable/divider.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape = "rectangle" >
     
-    <size android:width="1dp"
-          android:height="1dp"
+    <size android:width="@dimen/divider_size"
+          android:height="@dimen/divider_size"
           />
     
     <solid android:color="@android:color/transparent" />
