--- a/res/layout/activity_bus_train.xml
+++ b/res/layout/activity_bus_train.xml
@@ -1,15 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="300dp"
-    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".BusTrainActivity"
-    android:orientation="horizontal"
-    android:layout_gravity = "center" >
+    android:orientation="vertical"
+    android:layout_gravity = "center_horizontal" 
+    android:gravity = "center_horizontal"
+    android:weightSum = "45">
+    
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="9" />
 
     
 	
@@ -18,87 +25,113 @@
 	<TextView
 	    android:id="@+id/select_mode"
 	    android:layout_width="wrap_content"
-	    android:layout_height="wrap_content"
-	    android:layout_centerHorizontal="true"
-	    android:paddingBottom="10sp"
+	    android:layout_height="0dp"
+	    android:gravity = "top"
 	    android:text="SELECT MODE"
-	    android:textSize="30sp" />
-	
+	    android:textSize="30sp"
+		android:layout_weight="9"/>
+
 	<LinearLayout
-	    android:layout_width="wrap_content"
-	    android:layout_height="wrap_content"
-	    android:orientation="vertical"
-	    android:gravity="center_horizontal"
-	    android:layout_alignParentLeft="true"
-	    android:layout_below="@+id/select_mode" >
-	
-	 <ImageButton
-	     android:id="@+id/mrt_button"
-	     android:layout_width="wrap_content"
-	     android:layout_height="wrap_content"
-	     android:contentDescription="bus"
-	     android:src="@drawable/mrt_icon"
-	     android:paddingBottom="5dp"
-	     android:background="@android:color/transparent" />
-	 
-	 <TextView 
-	     android:layout_width="wrap_content"
-	     android:layout_height="wrap_content"
-	     android:text="MRT"/>
-	
+	    android:layout_width="match_parent"
+	    android:layout_height="0dp"
+	    android:layout_weight="12"
+	    android:orientation="horizontal"
+	    android:weightSum="10" >
+
+	    <View
+	        android:layout_width="0dp"
+	        android:layout_height="match_parent"
+	        android:layout_weight="1" />
+
+	    <LinearLayout
+	        android:id="@+id/bus_button_linear_view"
+	        android:layout_width="0dp"
+	        android:layout_height="match_parent"
+	        android:layout_weight="4"
+	        android:gravity="center_horizontal"
+	        android:orientation="vertical"
+	        android:weightSum="4" >
+
+	        <ImageButton
+	            android:id="@+id/bus_button"
+	            android:layout_width="match_parent"
+	            android:layout_height="0dp"
+	            android:layout_weight="3"
+	            android:background="@android:color/transparent"
+	            android:contentDescription="bus"
+	            android:scaleType="fitCenter"
+	            android:src="@drawable/bus_icon"
+	            android:onClick="startBusMode" />
+
+	        <TextView
+	            android:layout_width="match_parent"
+	            android:layout_height="0dp"
+	            android:layout_weight="1"
+	            android:gravity="center"
+	            android:text="BUS" />
+	    </LinearLayout>
+
+	    <LinearLayout
+	        android:id="@+id/bus_button_linear_view"
+	        android:layout_width="0dp"
+	        android:layout_height="match_parent"
+	        android:layout_weight="4"
+	        android:gravity="center_horizontal"
+	        android:orientation="vertical"
+	        android:weightSum="4" >
+
+	        <ImageButton
+	            android:id="@+id/mrt_button"
+	            android:layout_width="match_parent"
+	            android:layout_height="0dp"
+	            android:layout_weight="3"
+	            android:background="@android:color/transparent"
+	            android:contentDescription="mrt"
+	            android:scaleType="fitCenter"
+	            android:src="@drawable/mrt_icon"
+	            android:onClick="startMRTMode" />
+
+	        <TextView
+	            android:layout_width="match_parent"
+	            android:layout_height="0dp"
+	            android:layout_weight="1"
+	            android:gravity="center"
+	            android:text="MRT" />
+	    </LinearLayout>
 	</LinearLayout>
 	
-	<LinearLayout
-	    android:id = "@+id/bus_button_linear_view"
-	    android:layout_width="wrap_content"
-	    android:layout_height="wrap_content"
-	    android:orientation="vertical"
-	    android:gravity="center_horizontal"
-	    android:layout_alignParentRight="true"
-	    android:layout_below="@+id/select_mode" >
+	<View
+        android:layout_width="fill_parent"
+        android:layout_height="0dp"
+        android:layout_weight="3" />
 	
-	 <ImageButton
-	     android:id="@+id/bus_button"
-	     android:layout_width="wrap_content"
-	     android:layout_height="wrap_content"
-	     android:contentDescription="bus"
-	     android:src="@drawable/bus_icon"
-	     android:paddingBottom="5dp"
-	     android:background="@android:color/transparent" />
-	 
-	 <TextView 
-	     android:layout_width="wrap_content"
-	     android:layout_height="wrap_content"
-	     android:text="BUS"/>
-	
-	</LinearLayout>
-        
-    <LinearLayout
+	<LinearLayout 
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_below ="@+id/bus_button_linear_view"
-        android:layout_centerHorizontal="true"
+        android:layout_height = "0dp"
+        android:layout_weight="3"
+        android:gravity = "center"
+        android:orientation = "horizontal"
         android:divider="@drawable/divider"
-        android:showDividers="middle"
-        android:paddingTop = "40dp">
-	  
-       	<View
+        android:showDividers="middle">
+        
+        <View
 	    	android:background="@drawable/progress_circle_in_progress"
-		    android:layout_height="10dp"
-		    android:layout_width="10dp"/>
+		    android:layout_height="@dimen/circle_diameter"
+		    android:layout_width="@dimen/circle_diameter"/>
 	        
         <View
-		    android:background="@drawable/progress_circle_future"
-		    android:layout_height="10dp"
-		    android:layout_width="10dp"/>
+		    android:background="@drawable/progress_circle_not_in_progress"
+		    android:layout_height="@dimen/circle_diameter"
+		    android:layout_width="@dimen/circle_diameter"/>
         
         <View
-		    android:background="@drawable/progress_circle_future"
-		    android:layout_height="10dp"
-		    android:layout_width="10dp"/>
+		    android:background="@drawable/progress_circle_not_in_progress"
+		    android:layout_height="@dimen/circle_diameter"
+		    android:layout_width="@dimen/circle_diameter"/>
         
     </LinearLayout>
+	
+	
     
-</RelativeLayout>
+</LinearLayout>
 
