--- a/res/layout/activity_bus_progress.xml
+++ b/res/layout/activity_bus_progress.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".BusTrainActivity"
+    tools:context=".BusProgressActivity"
     android:orientation="vertical"
     android:layout_gravity="center"
     android:gravity = "center_horizontal">
@@ -41,7 +41,7 @@
         android:layout_height="wrap_content"
         android:text="Stop"
         android:textSize="14sp"
-        android:onClick="process" />
+        android:onClick="stopKeeper" />
     
 
 </LinearLayout>
