--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -2,8 +2,8 @@
 
     <item
         android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:showAsAction="never"
-        android:title="@string/action_settings"/>
+        android:showAsAction="always|withText"
+        android:title="@string/action_settings"
+        android:icon="@drawable/settings_icon"/>
 
 </menu>
