--- a/res/layout/activity_bus_train.xml
+++ b/res/layout/activity_bus_train.xml
@@ -100,10 +100,23 @@
 	    </LinearLayout>
 	</LinearLayout>
 	
-	<View
+	<EditText
+        android:hint="or, where do you want to go?"
+		android:id="@+id/destinationTextBox"
+		android:layout_width="match_parent"
+		android:layout_height="0dp"
+		android:background = "@drawable/background_text_box"
+		android:paddingTop="5dp"
+		android:paddingBottom="5dp"
+		android:paddingLeft = "5dp"
+		android:layout_weight = "3"
+		android:imeOptions="actionDone"
+		/>
+	
+	<!-- View
         android:layout_width="fill_parent"
         android:layout_height="0dp"
-        android:layout_weight="3" />
+        android:layout_weight="3" /-->
 	
 	<LinearLayout 
         android:layout_width="wrap_content"
