--- a/res/layout/activity_bus_enter_destination.xml
+++ b/res/layout/activity_bus_enter_destination.xml
@@ -18,12 +18,13 @@
         android:layout_weight="9" />
     
     <TextView
-	     android:layout_width="wrap_content"
-	     android:layout_height="0dp"
-	     android:layout_weight = "9"
-	     android:text="SELECT\nDESTINATION"
-	     android:textSize="30sp"
-	     android:gravity="center" />
+        android:id="@+id/select_destination"
+	    android:layout_width="wrap_content"
+	    android:layout_height="0dp"
+	    android:layout_weight = "9"
+	    android:text="SELECT\nDESTINATION"
+	    android:gravity="center"
+	    style="@style/HeadingText"/>
     
     
 
@@ -31,7 +32,7 @@
         android:layout_width="fill_parent"
         android:layout_height="0dp"
         android:layout_weight="3" />
-    
+    <!-- 
     <EditText
         android:hint="ENTER BUS STOP (NO./ NAME)"
 		android:id="@+id/busDestinationTextbox"
@@ -44,6 +45,42 @@
 		android:layout_weight = "3"
 		android:imeOptions="actionDone"
  		/>
+     -->
+    <RelativeLayout
+        android:layout_width="fill_parent"
+    	android:layout_height="0dp"
+    	android:orientation="horizontal"
+    	android:gravity="center_vertical"
+    	android:layout_weight = "3">
+    	
+        <AutoCompleteTextView 
+	        android:hint="ENTER BUS STOP NAME"
+			android:id="@+id/busDestinationAuto"
+			android:layout_width="0dp"
+			android:layout_height="wrap_content"
+			android:background = "@drawable/background_text_box"
+			android:paddingTop="5dp"
+			android:paddingBottom="5dp"
+			android:paddingLeft = "5dp"
+			android:layout_toLeftOf="@+id/busGo"
+			android:layout_alignParentLeft="true"
+ 		/>
+        
+        <Button
+            android:onClick="submitDestination"
+            android:background="@android:color/white"
+            android:id="@+id/busGo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:text="Go"
+            android:textSize="18sp"
+            android:textColor="@color/emerald"
+            android:layout_alignParentRight="true">
+        </Button>
+        
+    </RelativeLayout>
+    
     
     <View
         android:layout_width="fill_parent"
