--- a/res/layout/activity_bus_train.xml
+++ b/res/layout/activity_bus_train.xml
@@ -28,8 +28,8 @@
 	    android:layout_height="0dp"
 	    android:gravity = "top"
 	    android:text="SELECT MODE"
-	    android:textSize="30sp"
-		android:layout_weight="9"/>
+		android:layout_weight="9"
+		style="@style/HeadingText"/>
 
 	<LinearLayout
 	    android:layout_width="match_parent"
@@ -99,7 +99,7 @@
 	            android:text="MRT" />
 	    </LinearLayout>
 	</LinearLayout>
-	
+	<!-- 
 	<EditText
         android:hint="or, where do you want to go?"
 		android:id="@+id/destinationTextBox"
@@ -112,11 +112,11 @@
 		android:layout_weight = "3"
 		android:imeOptions="actionDone"
 		/>
-	
-	<!-- View
+	 -->
+	<View
         android:layout_width="fill_parent"
         android:layout_height="0dp"
-        android:layout_weight="3" /-->
+        android:layout_weight="3" />
 	
 	<LinearLayout 
         android:layout_width="wrap_content"
