--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -17,11 +17,12 @@
     	android:paddingLeft="@dimen/activity_horizontal_margin"
     	android:paddingRight="@dimen/activity_horizontal_margin"
     	android:paddingTop="@dimen/activity_vertical_margin" >
+        <!-- 
         <TextView android:id="@+id/welcome"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/welcome"
-            android:textSize="18sp" />
+            android:textSize="18sp" /> -->
         <TextView android:id="@+id/getstarted"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
