--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -4,6 +4,7 @@
         android:id="@+id/action_settings"
         android:showAsAction="always|withText"
         android:title="@string/action_settings"
-        android:icon="@drawable/settings_icon"/>
+        android:icon="@drawable/settings_icon"
+        />
 
 </menu>
