--- a/res/values-v11/styles.xml
+++ b/res/values-v11/styles.xml
@@ -6,6 +6,7 @@
     -->
     <style name="AppBaseTheme" parent="@style/Theme.Sherlock.Light">
         <!-- API 11 theme customizations can go here. -->
+        <item name="android:actionBarStyle">@style/TransparentActionBarStyle</item>
     </style>
 
 </resources>
