--- a/res/layout/activity_bus_progress.xml
+++ b/res/layout/activity_bus_progress.xml
@@ -7,14 +7,13 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".BusProgressActivity"
+    tools:context=".ProgressActivity"
     android:orientation="vertical"
     android:layout_gravity="center"
     android:gravity = "center_horizontal">
     
     <TextView
         android:id="@+id/approximately"
-        android:text="approximately"
         android:textSize="32sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -28,8 +27,7 @@
         android:textColor="@color/emerald"/>
     
     <TextView
-        android:id="@+id/to_arrival" 
-        android:text="to arrival"
+        android:id="@+id/to_arrival"
         android:textSize="32sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
